@@ -53,6 +53,12 @@ ifeq ($(DEB_HOST_ARCH), armhf)
   export CFLAGS = -marm
 endif
 
+
+#
+# Multi-arch support
+DEB_CONFIGURE_EXTRA_FLAGS += --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
+
+
 # warning: if the --with autoreconf is removed then
 # the patch debian/patches/debian-no-linked-scripts
 # must be adapted to also patch the Makefile.in!
