@@ -3,8 +3,9 @@ texlive-bin (2015.20150524.37493-7) UNRELEASED; urgency=medium
   * Multi-arch conversion:
     - bump dh dep to >= 8.1.3
     - add Pre-Depends: ${misc:Pre-Depends} to all shlibs packages
+    - add DEB_CONFIGURE_EXTRA_FLAGS setting to debian/rules
 
- -- Norbert Preining <preining@debian.org>  Sun, 20 Sep 2015 11:07:29 +0900
+ -- Norbert Preining <preining@debian.org>  Sun, 20 Sep 2015 11:08:59 +0900
 
 texlive-bin (2015.20150524.37493-6) unstable; urgency=medium
 
